--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:text="Minhas Listas"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="@color/md_theme_onSurface"
+        android:textColor="@color/md_theme_primary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nova Lista"
-        android:backgroundTint="#001FF6"
+        android:backgroundTint="@color/md_theme_onPrimary"
         android:textColor="#FFFFFF"
         app:icon="@drawable/add"
         app:iconTint="#FFFFFF"
@@ -57,48 +57,5 @@
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btnNewList2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nova Lista"
-        android:backgroundTint="#E14501"
-        android:textColor="#FFFFFF"
-        app:icon="@drawable/add"
-        app:iconTint="#FFFFFF"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="120dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btnNewList3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nova Lista"
-        android:backgroundTint="#3C6939"
-        android:textColor="#FFFFFF"
-        app:icon="@drawable/add"
-        app:iconTint="#FFFFFF"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="202dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btnNewList4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nova Lista"
-        android:backgroundTint="@color/md_theme_onError"
-        android:textColor="#FFFFFF"
-        app:icon="@drawable/add"
-        app:iconTint="#FFFFFF"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="280dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
