--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -37,8 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Nome"
-        android:textColor="@color/md_theme_onSurface"
         android:textSize="24dp"
+        android:textStyle="bold"
+        android:textColor="@color/md_theme_primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageProfile" />
