--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="md_theme_primary">#60A5E0</color>
-    <color name="md_theme_onPrimary">#1630E4</color>
+    <color name="md_theme_primary">#65DD96</color>
+    <color name="md_theme_onPrimary">#00864D</color>
     <color name="md_theme_primaryContainer">#245024</color>
     <color name="md_theme_onPrimaryContainer">#BCF0B4</color>
     <color name="md_theme_secondary">#FFB4A4</color>
