--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-    <color name="md_theme_primary">#60A5E0</color>
-    <color name="md_theme_onPrimary">#1630E4</color>
+    <color name="md_theme_primary">#65DD96</color>
+    <color name="md_theme_onPrimary">#00864D</color>
     <color name="md_theme_primaryContainer">#BCF0B4</color>
     <color name="md_theme_onPrimaryContainer">#002204</color>
     <color name="md_theme_secondary">#904B3C</color>
