--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -34,7 +34,7 @@
             android:id="@+id/imageBtnValues"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/add"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="15dp"
