--- a/app/src/main/res/layout/bottom_sheet_list.xml
+++ b/app/src/main/res/layout/bottom_sheet_list.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingHorizontal="16dp"
-    android:paddingBottom="20dp"
-    android:background="#121212">
+    android:paddingBottom="20dp">
 
     <com.google.android.material.bottomsheet.BottomSheetDragHandleView
         android:layout_width="match_parent"
@@ -31,6 +30,32 @@
 
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/div"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_marginStart="60dp"
+        app:layout_constraintBottom_toTopOf="@id/btnInfo"
+        app:layout_constraintTop_toBottomOf="@id/btnInfo" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnUpdateNameList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="10dp"
+        android:text="Renomear"
+        android:textAlignment="textStart"
+        android:textColor="@color/md_theme_onSurface"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:icon="@drawable/pencil_sharp"
+        app:iconTint="@color/md_theme_onSurface"
+        app:iconPadding="20dp"
+        app:iconSize="30dp" />
+
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/div3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
